# dwt_backend

./: .env  .gitignore  AVALANCHE_WALLET_README.md  BASE_WALLET_README.md  BLOCKCYPHER_WEBHOOK_ARCHITECTURE.md  BLOCK_API.md  BNB_WALLET_SUMMARY.md  BTC_REMOTE_RPC_CONFIG.md  BTC_RPC_INTEGRATION.md  CLEAN_MIGRATION_SOLUTION.md  CRYPTO_MIGRATION_README.md  Dockerfile.litecoin  Dockerfile.solana-webhook-test  Dockerfile.wallet-test  Dockerfile.withdrawal-test  ENHANCED_TRANSFER_SYSTEM_README.md  ETHEREUM_WITHDRAWAL_PROXY_README.md  ETH_WALLET_README.md  ETH_WEBHOOK_MIGRATION_README.md  MIGRATION_CLEANUP_PLAN.md  MIGRATION_RESOLUTION_STRATEGY.md  MIGRATION_RESOLUTION_SUMMARY.md  Makefile  OPTIMISM_README.md  POLYGON_WALLET_SUMMARY.md  Pipfile  README_btc_client.md  REALTIME_MONITORING.md  SOLANA_UNIQUENESS_GUARANTEES.md  SOLANA_WALLET_README.md  SOLANA_WEBHOOK_INTEGRATION.md  SOLANA_WEBHOOK_README.md  SPV_API_README.md  SPV_COMPARISON.md  SPV_README.md  TRADING_SYSTEM_README.md  TRADING_WEBHOOKS_README.md  TRANSACTION_SENDING.md  TRON_README.md  WORLD_CHAIN_README.md  (+149 more)
admin/: Dockerfile  Dockerfile.prod  app.py  currency_routes.py  seed_currencies.py
alembic/: alembic.ini  env.py
api/: Dockerfile  Dockerfile.prod  app.py  grpc_client.py  websocket_service.py
auth/: Dockerfile  Dockerfile.prod  app.py  (+6 more)
nodes/bitcart/: pyproject.toml
nodes/bitcart/daemons/: base.py  btc.py  eth.py  genericprocessor.py  matic.py  trx.py
nodes/bitcart/requirements/: web.txt
nodes/bitcart/requirements/daemons/: trx.txt
nodes/bitcart/requirements/deterministic/daemons/: trx.txt
(+774 files in other folders)
